fix: ribbon overflow

--- a/css/stylenew.css
+++ b/css/stylenew.css
@@ -16958,8 +16958,8 @@ html[data-ui-mode=mini] .tn-ribbon > section > ul > li:hover > footer {
   border: 1px solid var(--t-border-color);
 }
 html[data-ui-mode=mini] .tn-ribbon > section {
-  overflow-x: visible;
-  overflow-y: visible;
+  overflow-x: auto;
+  overflow-y: hidden;
   z-index: 1;
 }
 html[data-ui-mode=mini] .tn-ribbon > section > ul > li {
